--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'FuenteMario'; /* Replace with your chosen font name */
+  src: url('assets/fonts/PTSerif-Regular.ttf') format('ttf'),
+  /* Add more src lines if you have different font file formats */
+}
+
+*{
+  font-family: 'FuenteMario';
+}
+
 /*
 .color1 { #997f65 };
 .color2 { #cabcaf };
